# advent_of_code

./: .gitignore  .ocamlformat  README.md  aoc_input.sh  dune-project  justfile  pyproject.toml
.claude/: settings.local.json
2015/day_01/: README.md  part_1.py  part_2.py
2015/day_02/: README.md  part_1.py  part_2.py
2016/day_01/: README.md
2018/day_01/: README.md  part_1.py  part_2.py
2018/day_02/: README.md  part_1.py  part_2.py
2018/day_03/: README.md  part_1.py  part_2.py
2018/day_04/: README.md  part_1.py
2018/day_05/: README.md  input.txt  part_1.py  part_2.py
2018/day_06/: README.md  part_1.py
2018/day_07/: README.md  part_1.py
2019/day_02/: README.md
2023/day_01/: part_1.py
2023/day_02/: part_1.py
2023/day_03/: README.md
2023/day_05/: part_1.py
2023/day_06/: README.md  part_1.py
2023/day_07/: part_2.py
2023/day_08/: part_2.py
2023/day_10/: part_1.py
2024/day_01/: README.md  part_1.py  part_2.py
2024/day_02/: README.md  part_1.py  part_2.py
2024/day_03/: README.md  part_1.py  part_2.py
2024/day_04/: README.md  part_1.py
2024/day_05/: README.md  part_1.py  part_2.py
2024/day_07/: README.md  part_1.py  part_2.py
2025/day_01/: dune  part_01.ml  part_02.ml
day_02/: part_2.py
day_07/: part_1.py
day_08/: part_1.py
day_09/: README.md
day_1/: README.md  part_1.py  part_2.py  test.py
day_10/: README.md
day_2/: README.md
day_3/: part_1.py
day_4/: README.md  part_1.py  part_2.py
day_5/: README.md
day_6/: README.md  part_1.py  part_2.py
day_7/: README.md  example.txt  part_1.py  part_2.py
day_8/: README.md  part_1.py
day_9/: README.md  part_1.py  part_2.py
