[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8"
mypy = "^1.13"

[tool.ruff]
target-version = 'py312'

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
