[project]
name = "advent-of-code"
version = "0"
requires-python = ">=3.14, <3.15"
dependencies = []

[tool.uv]
package = false
dev-dependencies = [
    "ruff>=0.14.4",
    "mypy>=1.18.2",
]

[tool.ruff]
target-version = 'py314'
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-select = ["I"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_untyped_defs = true
